--- a/templates/blocks/component/foot.ejs
+++ b/templates/blocks/component/foot.ejs
@@ -3,12 +3,11 @@
 <div class="container">
 	<div class="footer-copyright text-xs px-3">
 		<div class="float-left">
-			Copyright © 2020 
-			<%- themeConfig.footerInfo %>
+			© 2020 Copyright 
+			<%= site.customConfig.footzb %> 
 		</div>
 		<div class="float-right d-none">
-			  Designed by <a href="//803344.xyz/" title="Art" target="_blank">Art</a>
-			移植 <a href="//www.hankin.cn/" title="" rel="home">hankin主题</a>
+			<%- themeConfig.footerInfo %> | Theme by <a href="//803344.xyz/" title="Art" target="_blank">Art</a>
 			</div>
 	</div>
 </div>
