--- a/templates/blocks/head.ejs
+++ b/templates/blocks/head.ejs
@@ -4,36 +4,38 @@
         <a class="mobile-menu" id="mobile-collapse" href="#!"><span></span></a>
         <a href="<%= themeConfig.domain %>" class="b-brand">
             <!-- ========   change your logo hear   ============ -->
-                        <img src="<%= themeConfig.domain %>/media/images/logo.png" alt="" class="logo" width="68" height="auto">
+                        <img src="<%= cdn %>/media/images/logo.png" alt="" class="logo" width="68" height="auto">
                     </a>
         <a href="#!" class="mob-toggler">
             <i class="feather icon-more-vertical"></i>
         </a>
     </div>
     <div class="collapse navbar-collapse">
-        <!-- <ul id="menu-gu%e8%87%aa%e7%94%a8-1" class="navbar-nav top-navbar-nav"><li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-132"><a href="" aria-current="page">首页</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-133"><a href="sample-page/index.html">示例页面</a></li>
-</ul> -->
+        <ul class="navbar-nav top-navbar-nav">
+		<% if (topnav) { %>
+		<% for (let i = 0; i < topnav.length; i++) {%>
+                <li>
+                    <a href="<%= topnav[i].link %>"><%= topnav[i].name %></a>
+                </li>
+		<% } %>
+		<% } %>
+        </ul>
 
 
 
 
-        <ul class="navbar-nav ml-auto" style="
-    height: 0px;
-">
 
+
+
+
+        <ul class="navbar-nav ml-auto" style=" height: 0px; ">
 
             <li class="nav-item m-r-10"><a href="javascript:void(0)" class="nav-switch-dark-mode text-lg" title="关灯">
                 <i class="feather icon-moon"></i></a>
             </li>
             <li class="nav-item">
-                <a href="#!" class="pop-search text-lg"><i class="feather icon-search"></i></a>
-                <form class="search-bar" id="searchform" method="get" role="search" action="http://127.0.0.1">
-                    <input type="text" name="s" class="form-control border-0 shadow-none" placeholder="请输入关键词搜索">
-                    <button type="button" class="close" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </form>
+                <a href="/soso" class="pop-search text-lg"><i class="feather icon-search"></i></a>
+                
             </li>
         </ul>
 
