--- a/templates/blocks/header.ejs
+++ b/templates/blocks/header.ejs
@@ -1,5 +1,13 @@
 <html>
-
+<% 
+if (site.customConfig.artcdn == "on") { 
+      cdn = site.customConfig.cdncdn
+      ym = site.customConfig.yymmm
+     } else {
+      cdn = themeConfig.domain + "/"
+      ym = site.customConfig.yymmm
+     }
+%>
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,41 +16,41 @@
 <title><%= siteTitle %></title>
 <meta name="description" content="<%- themeConfig.siteDescription %>" />
 
-<link rel="shortcut icon" href="<%= themeConfig.domain %>/favicon.ico">
+<link rel="shortcut icon" href="<%= cdn %>/favicon.ico">
 <meta name='robots' content='noindex,nofollow'>
 
 <SCRIPT language=javascript>
             window.onerror=function() { return true; }
 </SCRIPT>
 
-<script type='text/javascript' src='<%= themeConfig.domain %>/media/js/jquery-1.12.4-wp.js'></script>
-<script type='text/javascript' src='<%= themeConfig.domain %>/media/js/jquery-migrate.min-1.4.1.js'></script><!-- 应用迁移辅助插件 -->
+<script type='text/javascript' src='<%= cdn %>/media/js/jquery-1.12.4-wp.js'></script>
+<script type='text/javascript' src='<%= cdn %>/media/js/jquery-migrate.min-1.4.1.js'></script><!-- 应用迁移辅助插件 -->
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-<link rel="stylesheet" href="<%= themeConfig.domain %>/media/css/style.css">
-<link rel="stylesheet" href="<%= themeConfig.domain %>/media/css/main.css">
-<link rel="stylesheet" href="<%= themeConfig.domain %>/media/css/monokai_sublime.min.css">
+<link rel="stylesheet" href="<%= cdn %>/media/css/style.css">
+<link rel="stylesheet" href="<%= cdn %>/media/css/main.css">
+<link rel="stylesheet" href="<%= cdn %>/media/css/monokai_sublime.min.css">
 <!-- main.less -->
-<link rel="stylesheet"  href="<%= themeConfig.domain %>/styles/main.css">
+<link rel="stylesheet"  href="<%= cdn %>/styles/main.css">
 <!-- 目录索引 start-->
-<link href="<%= themeConfig.domain %>/media/plugins/tocify/toc.css" rel="stylesheet">
+<link href="<%= cdn %>/media/plugins/tocify/toc.css" rel="stylesheet">
 <% if (site.customConfig.valine == "on") { %>
 <!-- 评论 -->
-<script src="<%= themeConfig.domain %>/media/js/plugins/av-min.js"></script>
-<script type="text/javascript" src="<%= themeConfig.domain %>/media/js/plugins/Valine.Pure.js"></script>
+<script src="<%= cdn %>/media/js/plugins/av-min.js"></script>
+<script type="text/javascript" src="<%= cdn %>/media/js/plugins/Valine.Pure.js"></script>
 <%} %>
 
 
 
 <% if (site.customConfig.artmusic == "on") { %>
 <!--音乐-->
-<link rel="stylesheet" href="<%= themeConfig.domain %>/media/plugins/aplayer/APlayer.min.css">
+<link rel="stylesheet" href="<%= cdn %>/media/plugins/aplayer/APlayer.min.css">
 <% } %>
 
-<link rel="stylesheet" href="<%= themeConfig.domain %>/media/css/plugins/fancybox.min.css">
-<link rel="stylesheet" class="layout-css" id="layout-css" href=" <% if (site.customConfig.layoutys === 'white') { %> <% } else if (site.customConfig.layoutys === 'black') { %> <% } else if (site.customConfig.layoutys === 'fullblack') { %> <%= themeConfig.domain %>/media/css/layout-dark.css <% } %> ">
+<link rel="stylesheet" href="<%= cdn %>/media/css/plugins/fancybox.min.css">
+<link rel="stylesheet" class="layout-css" id="layout-css" href=" <% if (site.customConfig.layoutys === 'white') { %> <% } else if (site.customConfig.layoutys === 'black') { %> <% } else if (site.customConfig.layoutys === 'fullblack') { %> <%= cdn %>/media/css/layout-dark.css <% } %> ">
 
-<link rel="stylesheet" class="layout-blur-css" id="layout-blur-css" href="<% if (site.customConfig.glass) { %> <%= themeConfig.domain %>/media/css/layout-blur-css.css <% } else { %> <%} %>">
+<link rel="stylesheet" class="layout-blur-css" id="layout-blur-css" href="<% if (site.customConfig.glass) { %> <%= cdn %>/media/css/layout-blur-css.css <% } else { %> <%} %>">
  
 
 <link rel="stylesheet" class="rtl-css" id="rtl-css" href="">
@@ -63,3 +71,4 @@ body[class*=background-img-]{background-size:cover;background-repeat:no-repeat;b
             </div>
       </div>
       <!-- [ 预装机 ] End -->
+
