--- a/templates/blocks/nav.ejs
+++ b/templates/blocks/nav.ejs
@@ -9,9 +9,7 @@ map.set('/post/about', 'user')
 map.set('/image','image'); 
 map.set('/post/about','user');
  %>
-<nav class="
-pcoded-navbar menu-light
- ">
+<nav class="pcoded-navbar menu-light <%= site.customConfig.navoff %> ">
   <div class="navbar-wrapper  ">
     <div class="navbar-content scroll-div ">
 
