--- a/templates/image.ejs
+++ b/templates/image.ejs
@@ -7,7 +7,7 @@
 <!--侧导航 over-->
 
 <!-- 顶导航 -->
-<%- include('./blocks/head') %>
+<%- include('./blocks/head', { topnav: site.customConfig.topnav }) %>
 <!--顶导航 over-->
 
 <!-- 内容 -->
