--- a/templates/archives.ejs
+++ b/templates/archives.ejs
@@ -7,10 +7,11 @@
         <!--侧导航 over-->
 
         <!-- 顶导航 -->
-        <%- include('./blocks/head') %>
+        <%- include('./blocks/head', { topnav: site.customConfig.topnav }) %>
         <!--顶导航 over-->
 
         <!-- 内容 -->
+
 <section class="pcoded-main-container" id="content">
     <div class="pcoded-content">
         <div class="row">
