--- a/templates/blocks/post-list-zt.ejs
+++ b/templates/blocks/post-list-zt.ejs
@@ -1,13 +1,26 @@
 
 
+<%
+function postFeature(){
+  postFeatureImg = feature;
+	if (postFeatureImg.indexOf(ym) != -1){
+		postFeatureImg = cdn + postFeatureImg.substring(postFeatureImg.indexOf("post-images"))
+	}
+	return postFeatureImg;
+}
+%>
+
+
 
 <% if (site.customConfig.listform === 'home') { %>
 
-<div class="list-box">
+
+
+<div class="<% if (site.customConfig.listformd === 'homeer') { %>col-md-6 <% } %> list-box">
   <div class="card list-item block card-plain">
     <div class="media media-3x2 col-4 col-md-4">
       <a class="media-content" href="<%= link %>"
-        style="background-image: url('<% if (feature) { %><%= feature %><% } else { %><%= site.customConfig.featureImage %><%} %>');">
+        style="background-image: url('<% if (feature) { %><%- postFeature();%><% -%><% } else { %><%= site.customConfig.featureImage %><%} %>');">
         <span class="overlay"></span>
       </a>
     </div>
@@ -15,13 +28,15 @@
       <div class="list-body">
         <a href="<%= link %>" class="list-title text-lg h-2x">
           <!-- 标题 -->
+        <%if(istop){ %><div style="right:0;top:0;position:absolute"><div style="background-color: #f6e05e;font-size: .55rem;color: #000;padding-left: .5rem;padding-right: .5rem;border-bottom-left-radius: .5rem;">TOP</div></div><%}%>
           <%= title %>
         </a>
         <div class="list-desc d-none d-md-block text-sm text-secondary my-3">
-          <div class="h-2x ">
-            <!-- 摘要 -->
-            <%- description %>
-          </div>
+          
+              <div class="h-2x">
+                <%- description %>
+              </div>
+
         </div>
       </div>
       <div class="list-footer">
@@ -55,26 +70,25 @@
     </div>
   </div>
 </div>
-
 <% } else if (site.customConfig.listform === 'grid') { %>
 
 <div class="list-box">
-  <div class="col-md-6">
+  <div class="col-md-3 col-sm-6">
     <div class="list-item-column card card-featured p-0 box-grid">
       <div class="list-content p-0">
         <div class="media media-16x9">
           <a class="media-content" title="<%= title %>" href="<%= link %>"
-            style="background-image:url('<% if (feature) { %><%= feature %><% } else { %><%= site.customConfig.featureImage %><%} %>');border-radius: 4px 4px 0 0;">
+            style="background-image:url('<% if (feature) { %><%- postFeature();%><% -%><% } else { %><%= site.customConfig.featureImage %><%} %>');border-radius: 4px 4px 0 0;">
             <span class="overlay"></span>
           </a>
         </div>
         <a href="<%= link %>" class="grid_author_avt">
-          <div class="grid_author_bggo avatar bg-cover"
-            style="background-image: url(<%= site.customConfig.Profilepicture %>);"></div>
+          <div class="grid_author_bggo avatar bg-cover" style="background-image: url(<%= site.customConfig.Profilepicture %>);"></div>
 
         </a>
         <div class="list-body pt-3 pl-3 pr-3">
           <a class="list-title text-sm h-2x mb-2 mb-md-3 text-hidden" title="<%= title %>" href="<%= link %>">
+          <%if(istop){ %><div style="right:0;top:0;position:absolute"><div style="background-color: #f6e05e;font-size: .55rem;color: #000;padding-left: .5rem;padding-right: .5rem;border-bottom-left-radius: .5rem;">TOP</div></div><%}%>
             <%= title %> </a>
         </div>
         <div class="mb-2 mb-md-3 pl-3 pr-3">
