--- a/templates/github.ejs
+++ b/templates/github.ejs
@@ -7,7 +7,7 @@
 <!--侧导航 over-->
 
 <!-- 顶导航 -->
-<%- include('./blocks/head') %>
+<%- include('./blocks/head', { topnav: site.customConfig.topnav }) %>
 <!--顶导航 over-->
 
 <!-- 内容 -->
@@ -74,7 +74,8 @@
                       repo.language = "未知";
                     }
                     //匹配替换
-                    var item = githubItemTemple.replace("{REPO_NAME}", repo.name)
+                    var item = githubItemTemple
+                      .replace("{REPO_NAME}", repo.name)
                       .replace("{REPO_URL}", repo.html_url)
                       .replace("{REPO_STARS}", repo.stargazers_count)
                       .replace("{REPO_FORKS}", repo.forks_count)
